objects/Living_Will__c.object
<CustomObject>
    <fields>
        <fullName>Client_Information__c</fullName>
        <label>Client Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Living Wills</relationshipLabel>
        <relationshipName>Living_Wills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_1_Other_than_Client__c</fullName>
        <label>Person 1 Other than Client</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_2_Other_than_Client__c</fullName>
        <label>Person 2 Other than Client</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Agent__c</fullName>
        <label>Primary Agent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Agent__c</fullName>
        <label>Secondary Agent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_of_Efficacy_and_Directions__c</fullName>
        <label>Time of Efficacy and Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Living Will</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Living Will Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Living Wills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>